test/fail/typdef_assign_incompatible_child_typ.cll
typedef $A = { int a; };
$A $a = { a = 0.0; };
0;
